--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<h1> News </h1>
 			<p> <b>May 2024 (News):</b>
 				</a>  My work was featured as an AIP (American Institute of Physics) Science Highlight (Scilight).</u> 
-			<a href="doi.org/10.1063/10.0026052"> [link] </a>
+			<a href="https://doi.org/10.1063/10.0026052"> [link] </a>
 			<p> <b>May 2024 (Paper):</b>
 				</a>  My paper on the experimental details of radiatively cooled magnetic reconnection on Z now published as <u>Editor's Pick in Physics of Plasmas.</u> 
 			<a href="https://doi.org/10.1063/5.0201683"> [link] </a>
