--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,12 @@
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu">Menu: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
-			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
+			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
 			  
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 			 </p>
 
 			<p align="center">
@@ -46,11 +46,11 @@
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu">Menu: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
-			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
+			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
 		
 
 			<p>
@@ -67,50 +67,63 @@
 		<div class="main"><p><b>Laboratory Astrophysics and Magnetized Plasmas</b><p></div>
 		<div class = "Project1">
 			
-			<h1>Radiatively-Cooled Magnetic Reconnection</h1>
+			<h1>Radiative Cooling in Magnetic Reconnection</h1>
 			
-			<p>Reconnection occurs in a radiatively-cooled regime in many astrophysical plasmas, such as black hole accretion disks and their coronae, pulsar magnetospheres, and gamma-ray bursts.
-			Our experiments on the Z Machine were the first to access a regime that shows both plasmoid formation and strong cooling. 
+			<p>Reconnection occurs in a radiatively cooled regime in many astrophysical plasmas, such as in the solar coronal, black hole accretion disks and their coronae, pulsar magnetospheres, and gamma-ray bursts.
+			Our experiments on the Z Machine were the first to access a regime that shows plasmoid formation and strong radiative cooling. 
 			X-ray and visible spectroscopy, X-ray imaging, X-ray diodes and inductive probes were used to characterize the experiments, which were supplemented with 
-			three-dimensional resistive magnetohydrodynamic simulations of the experiment. </p>
+			three-dimensional radiative resistive magnetohydrodynamic simulations. 
+			 </p>
+			 <p>Editor's Suggestion. Phys. Rev. Lett. (2024)  <a href="https://doi.org/10.1103/physrevlett.132.155102">[Paper]</a></p>
+			 <p>Editor's Pick. Phys. Plasmas. (2024)  <a href="https://doi.org/10.1063/5.0201683">[Paper]</a></p>
+			 <p>Nature Astron. News Article. (2024)  <a href="https://www.nature.com/articles/s41550-024-02264-1">[Article]</a></p>
+			 <p>AIP Scilight. (2024) <a href="https://doi.org/10.1063/10.0026052">[Article]</a></p>
 			
 		</div>
+		
+		<img class = "image_reserach" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/images/MARZ.jpg">
 		
 		<div class = "Project1">
 			
-			<h1>Measuring Adibatic Index and Mach No. in Magnetized Oblique Shocks</h1>
-			<p>The adibatic index determines the amount of compression that shocks can generate, which is important in inertial and magneto-inertial confinement fusion.
-			This project, awarded the ZNetUS-2024 grant, aims to measure the adibatic index in magnetized plasmas. <p>
+			<h1>Magnetized Shocks in High Energy Density Plasmas</h1>
+			<p> Magnetized shocks occur in both inertial confinement fusion plasmas, and in astrophysical systems, where they drive compression and heating.
+			My experiments characterize the structure of bow shocks and oblique shocks in high Mach number plasma flows.
 			
-			
-		</div>
-		
-		<div class = "Project1">
-			
-			<h1>Magnetized High-Energy-Density Bow Shocks</h1>
-			
-			<p>Magnetized shocks occur in both inertial confinement fusion plasmas, and in astrophysical systems.
-			Our experiments show anisotropy in the shock structure, with a larger opening angle in the plane parallel to the magnetic field.</p>
+			<p>J. Plasma. Phys. (2022) <a href="https://doi.org/10.1017/S0022377822001118">[Paper]</a></p>
+			<p>Rev. Sci. Instrum. (2022) <a href="https://doi.org/10.1063/5.0098823.">[Paper]</a></p>
+			<p>MIT News. (2023)  <a href="https://news.mit.edu/2023/exploring-bow-shock-beyond-rishabh-datta-0424">[Article]</a></p>
 			
 		</div>
 		
-		<div class="main"><p><b>Computation and Numerical Modeling</b><p></div>
+				<img class = "image_reserach" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/images/OblShock.gif">
+		
+			
+		</div>
+		
+		<div class="main"><p><b>Computational Modeling</b><p></div>
+		
 		
 		<div class = "Project1">
 			
 			<h1>Resistive Magnetohydrodynamic Simulations</h1>
 			
-			<p>We run resitive MHD simulations using GORGON to model a variety of physics,
-			 including radiative-cooling and guide field effect in reconnection experiments, planar wire arrays, and bow shocks.</p>
+			<p>MHD simulations using GORGON help us model a variety of physics,
+			 including MHD instabilties, radiative cooling and guide field effect in reconnection experiments, planar wire arrays, and bow shocks.</p>
+			 
+			 <p>J. Plasma Phys. (2024) <a href="https://doi.org/10.1017/S0022377824000448">[Paper]</a></p>
+			 <p>Phys. Plasmas. (2023) <a href="https://doi.org/10.1063/5.0160893">[Paper]</a></p>
 			
 		</div>
+		
+		<img class = "image_reserach" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/images/sim.gif">
+		
 		
 		<div class = "Project1">
 			
 			<h1>Radiation Transport Modeling</h1>
 			
 			<p>Radiation transport modeling is necessary for interpreting visible or X-ray spectrosocpy data. 
-			Our radiation transport solver, which uses emissivity and opacity data computed using PrismSPECT or SCRAM, can be used to generate synthetic spectroscopic data.  </p>
+			Our radiation transport solver, which uses emissivity and opacity data computed using PrismSPECT or SCRAM, can be used to generate synthetic spectroscopic data for characterization of experiments.  </p>
 			
 		</div>
 		
@@ -120,10 +133,11 @@
 		
 		<div class = "Project1">
 			
-			<h1>Spectroscopy Analysis using Machine Learning</h1>
+			<h1>Machine Learning Boosted Plasma Diagnostics</h1>
 			
-			<p>Spectroscopy analysis can be time-consuming and computationally expensive for large datasets.
+			<p>Spectroscopy analysis can be time consuming and computationally expensive for large datasets.
 			Using machine learning, we can significanly reduce the time required to analyze spectroscopy data without a loss in prediction accuracy.</p>
+			<p> Trans. Plasma Sci. (2024) <a href="https://doi.org/10.1109/TPS.2024.3364975">[Paper]</a></p>
 			
 		</div>
 		
@@ -131,10 +145,13 @@
 			
 			<h1>Tomographic Reconstruction in Pulsed-Power Plasmas</h1>
 			
-			<p>Commonly-used plasma diagnostics, such as interferometry or self-emission imaging, provide line-integrated views of the plasma along limited lines of sight.
-			Using tomography, we can reconstruct the 3D structure of reconnection layers, z-pinches, and shocks.</p>
+			<p>Commonly used plasma diagnostics, such as interferometry or self-emission imaging, provide line-integrated views of the plasma along limited lines of sight.
+			Using tomography, we can reconstruct the 3-D structure of reconnection layers, z-pinches, MHD instabilities, and shocks.</p>
+			<p>Github. <a href="https://github.com/ridatta/SART.git">[Link]</a></p>
 			
 		</div>
+		
+		<img class = "image_reserach" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/images/tomography.png">
 		
 		
 		
@@ -144,6 +161,7 @@
 			
 			<p>We show that through simultaneous bow shock imaging and inductive probe measurements, velocity and temperature of the
 			 plasma can be measured using a cheap easy-to-implement diagnostic.</p>
+			 <p>Rev. Sci. Instrum. <a href="https://doi.org/10.1063/5.0098823.">[Paper]</a></p>
 			
 		</div>
 		
@@ -155,8 +173,12 @@
 			
 			<p>The properties of electromagnetic waves in magnetized plasmas can be used to design tunable metamaterials,
 			 such as plasma lenses, polarizers, and waveguides. We explore this using ray-tracing and Fourier optics. </p>
+			 <p> Github. <a href="https://github.com/ridatta/HamTracer.git">[Link]</a></p>
 			
 		</div>
+		
+		<img class = "image_reserach" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/images/focuser copy.gif">
+
 		
 		<div class = "Project1">
 		<h1>Surface Plasmon Polaritons (SPPs) on Anisotropic Interfaces   </h1>
