--- a/publications.html
+++ b/publications.html
@@ -21,12 +21,12 @@
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu">Menu: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
-			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
+			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
 			  
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 			 </p>
 
 			<p align="center">
@@ -46,11 +46,11 @@
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu">Menu: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
-			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
+			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
 		
 
 			<p>
