--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 			 </p>
 
 			<p align="center">
@@ -50,7 +50,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is in radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
 		
 
 			<p>
