--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
 		</div>
 		
 		<div class = "Project1">
+			
+			
+			</div>
+		
+		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>June 2024 (News):</b>
+				</a>  I was awarded the IEEE Igor Alexeff Outstanding Student in Plasma Science Award. </u> 
+			<a href="https://ieee-npss.org/technical-committees/plasma-science-and-applications/"> [link] </a>
 			<p> <b>May 2024 (News):</b>
 				</a>  My work was featured as an AIP (American Institute of Physics) Science Highlight (Scilight).</u> 
 			<a href="https://doi.org/10.1063/10.0026052"> [link] </a>
