--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
-			<p> <b>June 2024 (News):</b>
+			<p> <b>June 2024 (Award):</b>
 				</a>  I was awarded the IEEE Igor Alexeff Outstanding Student in Plasma Science Award. </u> 
 			<a href="https://ieee-npss.org/technical-committees/plasma-science-and-applications/"> [link] </a>
 			<p> <b>May 2024 (News):</b>
