--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
-			 </p>
+			<p class = "bio"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			  He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			
 
 			<p align="center">
 				<a class = "icon" href="https://scholar.google.com/citations?user=UakqPMUAAAAJ&hl=en" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/scholar.png" alt="Google Scholar"/> </a>
@@ -50,7 +53,10 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class = "bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			<p class = "bioside"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			 He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 		
 
 			<p>
@@ -71,6 +77,8 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>July 2024 (Defence):</b>
+				</a>  I defended my thesis titled "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power" successfully, and was awarded a Ph.D. in Mechanical Engineering from MIT. </u> 
 			<p> <b>June 2024 (Award):</b>
 				</a>  I was awarded the IEEE Igor Alexeff Outstanding Student in Plasma Science Award. </u> 
 			<a href="https://ieee-npss.org/technical-committees/plasma-science-and-applications/"> [link] </a>
