--- a/publications.html
+++ b/publications.html
@@ -26,8 +26,11 @@
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
-			 </p>
+			<p class = "bio"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			 He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			 
 
 			<p align="center">
 				<a class = "icon" href="https://scholar.google.com/citations?user=UakqPMUAAAAJ&hl=en" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/scholar.png" alt="Google Scholar"/> </a>
@@ -50,7 +53,10 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			 He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 		
 
 			<p>
@@ -86,6 +92,12 @@
 			<p> [1] H. E. Bush, <b> R. Datta </b>, and P. G. Loutzenhiser. "Aluminum-doped strontium ferrites for a two-step solar thermochemical air separation cycle: Thermodynamic characterization and cycle analysis." <a href="https://doi.org/10.1016/j.solener.2019.06.059"> Solar Energy 188 (2019): 775-786. </a>  </p>
 
 
+		</div>
+		
+		<div class="Project1">
+			<h1> Theses </h1>
+			<p> [T.2] Datta, R. (2022). "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power"  <a href="https://dspace.mit.edu/handle/1721.1/143220"> (Doctoral dissertation, Massachusetts Institute of Technology). </a></p>
+			<p> [T.1] Datta, R. (2022). "Laboratory Experiments of High-Energy-Density Shocks in Magnetized Supersonic Plasma Flows"  <a href="https://dspace.mit.edu/handle/1721.1/143220"> (Masters dissertation, Massachusetts Institute of Technology). </a></p>
 		</div>
 
 	</body>
