--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,11 @@
 			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
 			alt = "Headshot" width="250"></>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
-			 </p>
+			<p class = "bio"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			 He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
+			 
 
 			<p align="center">
 				<a class = "icon" href="https://scholar.google.com/citations?user=UakqPMUAAAAJ&hl=en" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/scholar.png" alt="Google Scholar"/> </a>
@@ -50,7 +53,10 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His area of focus is radiative processes in magnetic reconnection and shocks. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
+			 Rishabh works on the computational modeling of magnetohydrodynamics and runaway electrons in fusion plasmas. 
+			 He completed his Ph.D. at MIT in 2024, investigating the effects of radiative heat transfer in magnetic reconnection. His other interests include radiation transport, magnetized plasma shocks, and surrogate modeling. 
+			   <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 		
 
 			<p>
@@ -62,6 +68,19 @@
 				</a>
 				
 			</p>
+		</div>
+		
+		<div class="main"><p><b>Fusion Plasmas and Disruption Mitigation</b><p></div>
+		<div class="Project1">
+			<h1> Magnetohydrodynamic Modeling of Disruptions and Runaway Electrons</h1>
+			<p>Runaways are energetic electron populations accelerated to relativistic energies during disruption events.
+			 Runaways can carry a significant amount of current and cause catastrophic damage to plasma-facing components.
+			  This project focuses on multi-sclae coupling of runaways to MHD activity during disruption events on next-generation tokamaks.</p>
+		
+			<h1>Runaway Electron Mitigation</h1>
+			<p>The REMC is a passively driven magnetic coil that prevents runaway beam formation through generation of perturbed magnetic fields.
+			 Through self-consistent treatment of the runaway and MHD activity using three-dimensional M3D-C1 simulations, 
+			 we aim to demonstrate the efficacy of the REMC in mitigating runaway electrons on the SPARC and ARC tokamaks..</p>
 		</div>
 		
 		<div class="main"><p><b>Laboratory Astrophysics and Magnetized Plasmas</b><p></div>
