--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
-			<p> <b>July 2024 (Defence):</b>
+			<p> <b>July 2024 (Thesis):</b>
 				</a>  I defended my thesis titled "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power" successfully, and was awarded a Ph.D. in Mechanical Engineering from MIT. </u> 
+			
+			<p><b> July 2024 (News):</b> My work was featured on the MIT Plasma Science and Fusion Center News. <a href="https://www.psfc.mit.edu/news/2024/rishabh-datta-is-recreating-celestial-x-ray-bursts-in-a-lab"> [link] </a></p>
 			<p> <b>June 2024 (Award):</b>
-				</a>  I was awarded the IEEE Igor Alexeff Outstanding Student in Plasma Science Award. </u> 
+				</a>  I was awarded the <u>IEEE Igor Alexeff Outstanding Student in Plasma Science Award. </u> 
 			<a href="https://ieee-npss.org/technical-committees/plasma-science-and-applications/"> [link] </a>
 			<p> <b>May 2024 (News):</b>
 				</a>  My work was featured as an AIP (American Institute of Physics) Science Highlight (Scilight).</u> 
