--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			
+			<p> <b>October 2024 (Talk):</b>
+				 I presented a talk on shock mediated flux pileup and radiative cooling in magnetic reconnection at the APS Division of Plasma Physics '24 Meeting in Atlanta, GA. <a href="https://meetings.aps.org/Meeting/DPP24/Session/JO08.8">[link]</a></p> 
+			
 			<p> <b>July 2024 (Thesis):</b>
 				</a>  I defended my thesis titled "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power" successfully, and was awarded a Ph.D. in Mechanical Engineering from MIT. </u> 
 			
