--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
 			
 			<p> [6] <b> R. Datta </b>, A. J. Crilly, J. P. Chittenden, S. Chowdhry, K. Chandler, N. Chaturvedi, C. E. Myers, W. R. Fox, S. B. Hansen, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, D. A. Uzdensky, J. D. Hare (2024). “Simulations of radiatively cooled magnetic reconnection driven by pulsed-power.” <a href="https://doi.org/10.1017/S0022377824000448"> Journal of Plasma Physics. </a> </p>
 			
-			<p>[5] Datta, R., Ahmed F., Hare, J.D. (2023)  “Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas.”<a href="https://doi.org/10.1109/TPS.2024.3364975"> IEEE Transactions on Plasma Science. </a> </p>
+			<p>[5] <b> R. Datta </b>, Ahmed F., Hare, J.D. (2023)  “Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas.”<a href="https://doi.org/10.1109/TPS.2024.3364975"> IEEE Transactions on Plasma Science. </a> </p>
 
 
 			<p>[4] <b> R. Datta </b>, J. Angel, J. B. Greenly, S. N. Bland, J. P. Chittenden, E. S. Lavine, W. M. Potter D. Robinson, T. W. O. Varnish, E. Wong, D. A. Hammer, B. R. Kusse, J. D. Hare. "Plasma flows during the ablation stage of an over-massed pulsed-power-driven exploding planar wire array." <a href="https://doi.org/10.1063/5.0160893"> Physics of Plasmas 30, no. 9 (2023). </a>  </p>
