--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@
 		
 		<div class="Project1">
 			<h1> Theses </h1>
-			<p> [T.2] Datta, R. (2022). "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power"  <a href="https://dspace.mit.edu/handle/1721.1/143220"> (Doctoral dissertation, Massachusetts Institute of Technology). </a></p>
+			<p> [T.2] Datta, R. (2022). "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power"  <a href="https://arxiv.org/abs/2410.09840"> (Doctoral dissertation, Massachusetts Institute of Technology). </a></p>
 			<p> [T.1] Datta, R. (2022). "Laboratory Experiments of High-Energy-Density Shocks in Magnetized Supersonic Plasma Flows"  <a href="https://dspace.mit.edu/handle/1721.1/143220"> (Masters dissertation, Massachusetts Institute of Technology). </a></p>
 		</div>
 
