--- a/publications.html
+++ b/publications.html
@@ -95,6 +95,11 @@
 		</div>
 		
 		<div class="Project1">
+			<h1> Preprints </h1>
+			<p> [P.1] Varnish, T., Chen J., Chowdhry, S., <b>Datta, R.</b> , et al. (2024). "Quadrupolar Density Structures in Driven Magnetic Reconnection Experiments with a Guide Field."  <a href="https://arxiv.org/abs/2412.02556"> Arxiv. </a></p>
+		</div>
+		
+		<div class="Project1">
 			<h1> Theses </h1>
 			<p> [T.2] Datta, R. (2022). "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power"  <a href="https://arxiv.org/abs/2410.09840"> (Doctoral dissertation, Massachusetts Institute of Technology). </a></p>
 			<p> [T.1] Datta, R. (2022). "Laboratory Experiments of High-Energy-Density Shocks in Magnetized Supersonic Plasma Flows"  <a href="https://dspace.mit.edu/handle/1721.1/143220"> (Masters dissertation, Massachusetts Institute of Technology). </a></p>
