--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,9 @@
 		
 		<div class="Project1">
 			<h1>Publications</h1>
+			
+			<p> [9] T. O. Varnish, Chen, J., S. Chowdhry, <b>R. Datta </b>, G. V. Dowhan, L. S. Horan, N. M. Jordan, E. R. Neill et al. "Quadrupolar density structures in driven magnetic reconnection experiments with a guide field."  <a href="https://doi.org/10.1063/5.0251581"> Physics of Plasmas 32, No. 2  (2025). </a> </p>
+			
 			<p> [8] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Plasmoid Formation and Strong Radiative Cooling in a Driven Magnetic Reconnection Experiment.” <a href="https://doi.org/10.1103/physrevlett.132.155102">Physical Review Letters. Editors' Suggestion. </a> </p>
 			
 			<p>[7] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Radiatively cooled magnetic reconnection experiments driven by pulsed power.”<a href="https://doi.org/10.1063/5.0201683"> Physics of Plasmas. Invited Paper, Editors’ Pick, and Cover Article.  </a> </p>
@@ -96,7 +99,7 @@
 		
 		<div class="Project1">
 			<h1> Preprints </h1>
-			<p> [P.1] Varnish, T., Chen J., Chowdhry, S., <b>Datta, R.</b> , et al. (2024). "Quadrupolar Density Structures in Driven Magnetic Reconnection Experiments with a Guide Field."  <a href="https://arxiv.org/abs/2412.02556"> Arxiv. </a></p>
+			<p> [P.1] <b> R. Datta </b>, C. Clauser, N. Ferraro, C. Liu, R. Sweeney, R. A. Tinguely (2025). "Coupled 2-D MHD and runaway electron fluid simulations of SPARC disruptions."  <a href="https://doi.org/10.48550/arXiv.2503.1877"> Arxiv. </a></p>
 		</div>
 		
 		<div class="Project1">
