--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
 			  
-			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022_small.png"
+			  	<p align="center"><img src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headshot2024_small.png"
 			alt = "Headshot" width="250"></>
 			
 			<p class = "bio"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
@@ -50,7 +50,7 @@
 			<p class= "menu">Menu: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Research</a> </p>
-			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
+			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headshot2024.jpeg"
 			alt = "Headshot"></>
 
 			<p class ="bioside"> Rishabh Datta is a Postdoctoral Associate at the MIT Plasma Science and Fusion Center.
